# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPLv2

* baselayout-2.0.0_rc5 (11 Oct 2007)

  11 Oct 2007; Roy Marples <uberlord@gentoo.org>:

    Bump librc and libeinfo to .so.1
    If / block device as in /etc/fstab does not exist, use /dev/root if
    it's available in checkroot, #171593.

  09 Oct 2007; Roy Marples <uberlord@gentoo.org>:

    netmount, localmount, halt.sh and net scripts now check OS specific flags
    to see if a mount is network mounted (linux = fstab, *bsd = "local" in
    mount options) or not, #192772.
    txqueuelen_eth0= now works, #190538.

  03 Oct 2007; Roy Marples <uberlord@gentoo.org>:

    librc.so and libeinfo.so now have symbol versions.
    Default to tunctl so we can create the device as a specific
    user, #194588 thanks to Jaco Kroon.

  28 Sep 2007; Roy Marples <uberlord@gentoo.org>:

    rc_service_state now returns the state as a mask, which means that
    we can do things with just the one call making is more efficient.
    keymaps now sets unicode keyboard on all defined ttys, #192442 
    thanks to Pacho Ramos.
    net.sh now checks to see if root is net mounted if no predown function
    exists, #194074.
    enums are now fixed to specific values and are in UPPER CASE.

  26 Sep 2007; Roy Marples <uberlord@gentoo.org>:

    rc_is_env is now rc_env_bool and just works with boolean values.
    errno is set when it's not a boolean or does not exist.

  25 Sep 2007; Mike Frysinger <vapier@gentoo.org>:

    Skip consolefont setup when RC_TTY_NUMBER is set to 0.

    Add support for describing the options in the C programs.

    Retain behavior where `rc-update del foo` deletes foo from all runlevels.

    Retain behavior where `rc-update del` warns if nothing changed.

  24 Sep 2007; Mike Frysinger <vapier@gentoo.org>:

    Do not require portmap in netmount when nolock option is used with nfs