@@ -1,6 +1,10 @@
 # ChangeLog for Gentoo System Intialization ("rc") scripts
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPLv2
 
+  15 Oct 2007; Roy Marples <uberlord@gentoo.org>:
+
+    rc-status now orders services in start order, #195630
+
 * baselayout-2.0.0_rc5 (11 Oct 2007)
 
   11 Oct 2007; Roy Marples <uberlord@gentoo.org>:
